tests/baselines/reference/nameCollisions.errors.txt
==== tests/cases/compiler/nameCollisions.ts (9 errors) ====
    module T {
        var x = 2;
    
        module x { // error
               ~
!!! nameCollisions.ts(4,12): error TS2000: Duplicate identifier 'x'. Additional locations:
!!! 	nameCollisions.ts(2,9)
            export class Bar {
                test: number;
            }
        }
    
        module z {
            var t;
        }
        var z; // error
            ~
!!! nameCollisions.ts(13,9): error TS2000: Duplicate identifier 'z'. Additional locations:
!!! 	nameCollisions.ts(10,12)
    
        module y {
            var b;
        }
    
        class y { } // error
              ~
!!! nameCollisions.ts(19,11): error TS2000: Duplicate identifier 'y'. Additional locations:
!!! 	nameCollisions.ts(15,12)
    
        var w;
        module w { } //ok
    
        var f;
        function f() { } //error
                 ~
!!! nameCollisions.ts(25,14): error TS2000: Duplicate identifier 'f'. Additional locations:
!!! 	nameCollisions.ts(24,9)
    
        function f2() { }
        var f2; // error
            ~~
!!! nameCollisions.ts(28,9): error TS2000: Duplicate identifier 'f2'. Additional locations:
!!! 	nameCollisions.ts(27,5)
    
        var i;
        interface i { } //ok
    
        class C { }
        function C() { } // error
                 ~
!!! nameCollisions.ts(34,14): error TS2000: Duplicate identifier 'C'. Additional locations:
!!! 	nameCollisions.ts(33,5)
    
        function C2() { }
        class C2 { } // error
              ~~
!!! nameCollisions.ts(37,11): error TS2000: Duplicate identifier 'C2'. Additional locations:
!!! 	nameCollisions.ts(36,5)
    
        function fi() { }
        interface fi { } // ok
    
        class cli { }
        interface cli { } // error
                  ~~~
!!! nameCollisions.ts(43,15): error TS2000: Duplicate identifier 'cli'. Additional locations:
!!! 	nameCollisions.ts(42,5)
    
        interface cli2 { }
        class cli2 { } // error
              ~~~~
!!! nameCollisions.ts(46,11): error TS2000: Duplicate identifier 'cli2'. Additional locations:
!!! 	nameCollisions.ts(45,5)
    }